--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
       <div class="hero-right">
         <div class="bg-skew"></div>
-        <img src="C:\Users\Karti\Documents\Portfolio Website\Kartik\Img\Kartik Passport Photo.jpg" alt="Kartik Mone" />
+        <img src="Kartik Passport Photo.jpg" alt="Kartik Mone" />
       </div>
     </section>
   </div>
