--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="container">
             <div class="about-grid">
                 <div class="about-img">
-                    <img src="C:\Users\Karti\Documents\Portfolio Website\Kartik\Img\Kartik(Best Photo).jpg" alt="Profile Picture">
+                    <img src="Kartik(Best Photo).jpg" alt="Profile Picture">
                 </div>
                 <div class="about-content">
                     <h4 class="section-subtitle">MY INTRODUCTION</h4>
@@ -101,31 +101,31 @@
         <h2>My Skills</h2>
         <div class="skills-grid">
             <div class="skill-card">
-                <img src="C:\Users\Karti\Documents\Portfolio Website\Kartik\Img\java-symbol.png" class="skill-icon" alt="HTML" />
+                <img src="java-symbol.png" class="skill-icon" alt="HTML" />
                 <h4>Java</h4>
             </div>
             <div class="skill-card">
-                <img src="C:\Users\Karti\Documents\Portfolio Website\Kartik\Img\Python Symbol.png" class="skill-icon" alt="CSS" />
+                <img src="Python Symbol.png" class="skill-icon" alt="CSS" />
                 <h4>Python</h4>
             </div>
             <div class="skill-card">
-                <img src="C:\Users\Karti\Documents\Portfolio Website\Kartik\Img\SpringBoot Symbol.png" class="skill-icon" alt="JavaScript" />
+                <img src="SpringBoot Symbol.png" class="skill-icon" alt="JavaScript" />
                 <h4>Spring Boot</h4>
             </div>
             <div class="skill-card">
-                <img src="C:\Users\Karti\Documents\Portfolio Website\Kartik\Img\MySQL Symbol.png" class="skill-icon" alt="Bootstrap" />
+                <img src="MySQL Symbol.png" class="skill-icon" alt="Bootstrap" />
                 <h4>MYSQL</h4>
             </div>
             <div class="skill-card">
-                <img src="C:\Users\Karti\Documents\Portfolio Website\Kartik\Img\HTML,CSS,JS.jpg" class="skill-icon" alt="React" />
+                <img src="CHTML,CSS,JS.jpg" class="skill-icon" alt="React" />
                 <h4>HTML, CSS, JS</h4>
             </div>
             <div class="skill-card">
-                <img src="C:\Users\Karti\Documents\Portfolio Website\Kartik\Img\GitHub.png" class="skill-icon" alt="Photoshop" />
+                <img src="GitHub.png" class="skill-icon" alt="Photoshop" />
                 <h4>GitHub</h4>
             </div>
             <div class="skill-card">
-                <img src="C:\Users\Karti\Documents\Portfolio Website\Kartik\Img\Postman.png" class="skill-icon" alt="Photoshop" />
+                <img src="Postman.png" class="skill-icon" alt="Photoshop" />
                 <h4>Postman</h4>
             </div>
         </div>
@@ -136,7 +136,7 @@
         <h2 class="section-title">My Projects</h2>
         <div class="projects-grid">
             <div class="project-card">
-                <img src="Img/Crop Recommendation System.png" alt="Project 1" />
+                <img src="Crop Recommendation System.png" alt="Project 1" />
                 <div class="project-info">
                     <h3>Optimization Of Crop Recommendation Using Machine Learning</h3><br>
                     <p> Java, Spring Boot, JDBC, MySQL, Python, ML, HTML, CSS, JS, Bootstrap </p>
@@ -144,7 +144,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="Img/Banking System.png" alt="Project 2" />
+                <img src="Banking System.png" alt="Project 2" />
                 <div class="project-info">
                     <h3>Banking System (Spring Boot JPA) </h3><br>
                     <p>Java, Spring Boot, Spring Data JPA, JSP, MySQL, HTML/CSS</p>
@@ -152,7 +152,7 @@
                 </div> 
             </div>
             <div class="project-card">
-                <img src="Img/Quiz Application.png" alt="Project 3" />
+                <img src="Quiz Application.png" alt="Project 3" />
                 <div class="project-info">
                     <h3>Restful Quiz Application</h3><br>
                     <p>Java, Spring Boot, Spring MVC, REST APIs, Microservices, MySQL </p>
@@ -160,7 +160,7 @@
                 </div>
             </div>
              <div class="project-card">
-                <img src="Img/Inventory And Billing System for A Retail Shop.png" alt="Project 4" />
+                <img src="Inventory And Billing System for A Retail Shop.png" alt="Project 4" />
                 <div class="project-info">
                     <h3>Billing System for A Retail Shop</h3><br>
                     <p>Java, MySQL, HTML, CSS, JS, Bootstrap </p>
