--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <h4>MYSQL</h4>
             </div>
             <div class="skill-card">
-                <img src="CHTML,CSS,JS.jpg" class="skill-icon" alt="React" />
+                <img src="HTML,CSS,JS.jpg" class="skill-icon" alt="React" />
                 <h4>HTML, CSS, JS</h4>
             </div>
             <div class="skill-card">
